# mini-nudge-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  main.py  run.py
app/api/: routes.py
app/core/: classifier.py  generator.py  model.py  processor.py
app/utils/: helpers.py
data/: crm_events.csv  emails.json
tests/: test_classifier.py  test_scoring.py
